<resources>
    <string name="app_name">Movie administration</string>
    <string name="activity_list">Movie listing</string>

    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="genre">Genres</string>
    <string name="director">Director</string>
    <string name="evaluation">Evaluation</string>
    <string name="zero_to_ten">0 to 10</string>

    <string name="button_save_changes">Save changes</string>
    <string name="button_delete">Delete</string>
    <string name="button_search">Search</string>
    <string name="button_create_new">New</string>

    <string name="toast_saved">Saved</string>
    <string name="toast_deleted">Deleted</string>
    <string name="toast_created_new">New movie was created.</string>
    <string name="toast_server">Server is not available.</string>

    <string name="toast_movie_name">Please fill the name of movie.</string>
    <string name="toast_movie_year">Year is not in range 1900 to %d</string>
    <string name="toast_movie_genre">Please fill the genres.</string>
    <string name="toast_movie_director">Please fill the director\'s name.</string>
    <string name="toast_movie_evaluation">Evaluation is not in range 0 to 10.</string>

    <string name="edit_hint_movie_name">Movie name</string>

    <string name="menu_add_movie">Add movie</string>
</resources>
